# CPP-new-project-template-2026

./: .agignore  .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  iwyu_mappings.imp  mkdocs.yml
.agents/: README.md  parse_tags.py  refactoring_roadmap.md
.agents/skills/: cmake-style-guide.md  cpp-style-guide.md
.github/: README.md
.github/workflows/: docs.yml
Cmake/: CMakeLists.txt  OneApi_Advisor.cmake  OneApi_Vtune.cmake  dependencies.cmake  graphviz.cmake  heaptrack.cmake  iwyu.cmake  perf.cmake
Cmake/Templates/: targetCompileOptions.cmake  targetProperties.cmake
Documentation/: README.md  deep_debug_details.md  dual_preset_strategy.md  index.md  low_noise_profiling.md  multi_compiler_setup.md  production_artifacts.md  profiling_guide.md  project_documentation.md  static_analysis_workflows.md  symmetry_principle.md
production_artifacts/: README.md  build_all.sh  clang_tidy_state.md
srcTargets/: CMakeLists.txt
srcTargets/databaseManager/: CMakeLists.txt  databaseHelper.cpp  databaseHelper.hpp  databaseManager.cpp
srcTargets/databaseManager/databaseManager/: databaseManager.hpp
srcTargets/databaseManager/databaseManagerInterface/: CMakeLists.txt
srcTargets/databaseManager/databaseManagerInterface/databaseManagerInterface/: itemDatabase.proto
srcTargets/databaseManager/databaseManagerTEST/: CMakeLists.txt  databaseManagerTEST.cpp
srcTargets/dbExport/: CMakeLists.txt  dbExport.cpp
srcTargets/dbExport/dbExport/: dbExport.hpp
srcTargets/exeMain/: CMakeLists.txt  exeMain.cpp
srcTargets/exeMain/exeMain/: exeMain.hpp
srcTargets/tbbAlgos/: CMakeLists.txt  tbbAlgos.cpp
srcTargets/tbbAlgos/tbbAlgos/: tbbAlgos.hpp
srcTargets/tbbAlgos/tbbAlgosTEST/: CMakeLists.txt  tbbAlgosTEST.cpp
